[package]
name = "page-walker"
version = "0.1.0"
edition = "2018"
license = "MIT"
description = "A generic page table walker in Rust for operating systems, hypervisors, etc."
homepage = "https://codentium.com"
repository = "https://github.com/StephanvanSchaik/page-walker"

[dependencies]
bitflags = "1.3"
lazy_static = "1.4"
num-traits = { version = "0.2", default-features = false }
