[package]
name = "page-walker"
version = "0.3.0"
edition = "2018"
authors = ["S.J.R. van Schaik <stephan@synkhronix.com>"]
license = "MIT"
description = "A generic page table walker in Rust for operating systems, hypervisors, etc."
homepage = "https://codentium.com"
repository = "https://github.com/StephanvanSchaik/page-walker"

[dependencies]
bitflags = "1.3"
lazy_static = "1.4"
num-traits = { version = "0.2", default-features = false }
